--- a/general.css
+++ b/general.css
@@ -4,7 +4,7 @@ body {
 }
 #background {
   position: absolute;
-  height: 130%;
+  height: 150%;
   width: 100%;
   z-index: 1;
 }
@@ -103,11 +103,29 @@ li {
 /*Section of Runpayroll*/
 #Runpayroll {
   margin-top: 16px;
+  height: 500px;
+  display: flex;
+  width: 99%;
 }
-#Runpayroll div {
-  padding: 45px 0 0 14.5rem;
+#igwe {
+  height: 95%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  transform: translateY(24px);
 }
-#Runpayroll p {
+#Runpayroll_1 {
+  height: 100%;
+  width: 100%;
+}
+#runpay_header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transform: translateX(50px);
+}
+#Runpayrollp {
   font-size: 16px;
   font-family: aneionkregular;
   margin-top: -22px;
@@ -122,6 +140,7 @@ li {
   font-family: mellowregular, sans-serif;
   letter-spacing: 2px;
   line-height: 53px;
+  font-weight: 400px;
 }
 .pay {
   color: var(--color-green);
@@ -132,8 +151,16 @@ li {
 .sec {
   color: var(--color-red);
 }
+#startfree_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 200px;
+  width: 400px;
+  transform: translate(50px, 20px);
+}
 #startfree {
-  margin-top: -25px;
+  margin-top: 10px;
 }
 #startfree a {
   padding: 10px 20px;
@@ -152,13 +179,13 @@ li {
   font-weight: 500;
   font-family: aneionkregular, sans-serif;
   color: #000000;
+  line-height: 150px;
 }
 #p {
-  margin-top: 23px;
   margin-left: 3px;
 }
 #store {
-  margin-top: -50px;
+  transform: translateY(-70px);
 }
 #store img {
   height: 53px;
@@ -805,9 +832,6 @@ input.required:invalid {
 #arrow1:hover {
   transform: rotate(40deg);
 }
-section{
-  border: 1px solid green;
-}
 @media only screen and (max-width: 840px) {
   #cards {
     display: flex;
@@ -868,7 +892,7 @@ section{
   #bro {
     height: 50%;
   }
-  #foreverfree{
+  #foreverfree {
     height: 730px;
   }
   #demo_part1 {
@@ -906,44 +930,93 @@ section{
   #eazipaywork {
     display: none;
   }
-  #Runpayroll div {
-    padding-left: 12rem;
-  }
   .individual {
-    line-height: 64%;}
+    line-height: 64%;
+  }
   #a {
     line-height: 10%;
     font-size: 11px;
   }
-  #container_1{
+  #container_1 {
     flex-direction: column;
-    justify-content:center ;
+    justify-content: center;
     width: 400px;
     height: 900px;
-
   }
-  #forever h2{
+  #forever h2 {
     font-size: 40px;
   }
-  #forever{
-    
+  #forever {
   }
-  #container_img{
+  #container_img {
     transform: translateY(15px);
   }
-  body{
-border: 1px solid red;
-width: 100%;
+  body {
+    width: 100%;
   }
-  .footer_part2{
+  .footer_part2 {
     width: 200px;
   }
-  .footer_section2{
+  .footer_section2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  #demo_part2{
+  #demo_part2 {
     width: 400px;
+  }
+  #hero {
+    display: none;
+  }
+  #Runpayroll_1 {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+  }
+  #igwe {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 70%;
+    transform: translateY(0);
+  }
+  #Runpayroll {
+    height: 500px;
+  }
+  #runpay_header {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(0);
+  }
+  #Runpayroll h2 {
+    font-size: 40px;
+  }
+  #startfree_container {
+    margin-top: 20px;
+    width: 100%;
+    align-items: center;
+    transform: translate(0);
+  }
+  #Runpayrollp {
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    width: 90%;
+  }
+  #startfree {
+    margin-top: 50px;
+  }
+  #startfree a {
+    padding: 10px 25px;
+  }
+  nav a {
+    display: none;
+  }
+  #demo_form {
+    width: 78%;
+  }
+  #form_nav #D{
+    width: 100%;
   }
 }
