--- a/general.css
+++ b/general.css
@@ -215,13 +215,13 @@ li {
   position: absolute;
   margin-top: 30px;
   width: 100%;
-  height: 82%;
+  height: 580px;
   z-index: -1;
 }
 #green {
   position: absolute;
   width: 100%;
-  height: 92%;
+  height: 640px;
   z-index: -1;
 }
 .individual {
@@ -672,7 +672,6 @@ h3 {
   width: 100%;
 }
 #sub_field .D2 {
-
 }
 label {
   color: rgb(141, 142, 141);
@@ -834,10 +833,16 @@ input.required:invalid {
     width: 96%;
     height: 100%;
   }
+  #business {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .cardp {
-    width: 96%;
+    width: 86%;
     height: 100%;
-    padding: 0 0 0 12px;
+    border: 1px solid red;
   }
   .card {
     height: 130px;
@@ -847,13 +852,14 @@ input.required:invalid {
     box-shadow: none;
   }
   h3 {
-    font-size: 15px;
+    font-size: 100%;
+    text-align: center;
   }
   #card1,
   #card2,
   #card3 {
     position: relative;
-    width: 91%;
+    width: 100%;
   }
   #card2,
   #card3 {
@@ -866,7 +872,9 @@ input.required:invalid {
   .card {
   }
   .businessp {
-    font-size: 11px;
+    font-size: 12px;
+    text-align: center;
+    font-weight: 300;
   }
   #card2,
   #card3 {
@@ -1051,7 +1059,7 @@ input.required:invalid {
     align-items: center;
     flex-direction: column;
   }
-  #container{
+  #container {
     width: 100%;
     height: 100%;
   }
