--- a/general.css
+++ b/general.css
@@ -304,9 +304,8 @@ h3 {
 /* End of business*/
 /*Beginning of how eazipay work */
 #eazipaywork {
-  transform: translateY(97px);
+  padding-top: 100px;
   height: 900px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -335,7 +334,6 @@ h3 {
 #eazyblock {
   display: flex;
   justify-content: space-between;
-
   width: 100%;
 }
 #circlebar {
@@ -842,14 +840,14 @@ input.required:invalid {
   .cardp {
     width: 88%;
     height: 100%;
-    border: 1px solid red;
   }
   .card {
-    height: 130px;
+    height: 160px;
     padding: 10px 0 18px 7px;
     background-color: var(--color-white);
-    color: var(--color-black);
+    color: var(--color-grey);
     box-shadow: none;
+    box-shadow: 0 13px 37px hsla(0, 0%, 66.7%, 0.21);
   }
   h3 {
     font-size: 100%;
@@ -864,6 +862,7 @@ input.required:invalid {
   #card2,
   #card3 {
     transform: translatex(0);
+    margin-top: 10px;
   }
   #line,
   #green {
@@ -872,14 +871,9 @@ input.required:invalid {
   .card {
   }
   .businessp {
-    font-size: 12.5px;
-    text-align: center;
-    font-weight: 400;
+    font-size: 14px;
     width: 96%;
-  }
-  #card2,
-  #card3 {
-    margin-top: 10px;
+    font-weight: 1;
   }
   #card1:hover + #card2 {
     transform: translateX(0);
@@ -898,6 +892,7 @@ input.required:invalid {
   }
   #foreverfree {
     height: 730px;
+    margin-top: 0;
   }
   #demo_part1 {
     display: flex;
@@ -933,9 +928,10 @@ input.required:invalid {
     display: flex;
     flex-direction: column;
   }
-  #eazipaywork {
-    display: none;
+  .eaziwork_div {
+    height: 80%;
   }
+
   .individual {
     line-height: 64%;
   }
@@ -1040,10 +1036,12 @@ input.required:invalid {
   }
   #Business {
     margin-top: 0;
+    height: 950px;
   }
   #green {
     object-fit: cover;
-    object-position: center;
+    object-position: right;
+    height: 107%;
   }
   label {
     font-size: 13px;
@@ -1063,5 +1061,44 @@ input.required:invalid {
   #container {
     width: 100%;
     height: 100%;
+  }
+  #eazyblock {
+    flex-direction: column;
+    height: 100%;
+  }
+  #yanmife {
+    transform: translateY(0);
+    height: 97%;
+  }
+  #stepdiv {
+    display: none;
+  }
+  #gif {
+    height: 90%;
+
+    align-items: center;
+  }
+  #circlebar {
+    height: 60%;
+    width: 396px;
+  }
+  .circle_1 {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  #circle1,
+  #circle2,
+  #circle3 {
+    width: 100%;
+  }
+  #circle2 {
+    width: 85%;
+  }
+  #circle3 {
+    width: 91%;
+  }
+  #circle {
+    width: 100%;
   }
 }
